--- a/ToyStoreAPI/appsettings.json
+++ b/ToyStoreAPI/appsettings.json
@@ -5,8 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Email": {
+    "Username": "duchuyy16@gmail.com",
+    "Password": "opeifkfxcqidghwg"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ToyStoreConnectString": "Server=MSI\\HUYSQLSERVER;Database=ToyStore;User Id=sa; Password=123;"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
