--- a/ToyStoreAPI/appsettings.json
+++ b/ToyStoreAPI/appsettings.json
@@ -11,8 +11,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToyStoreConnectString": "Server=MSI\\HUYSQLSERVER;Database=ToyStore;User Id=sa; Password=123;"
-  },
+    "ToyStoreConnectString": "Server=DESKTOP-FIAICR4;Database=ToyStore;Trusted_Connection=True"
+  }, //DESKTOP-FIAICR4  MSI\\HUYSQLSERVER User Id=sa; Password=123;
   "JWT": {
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:5000",
